<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/gray_light"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/shop_fragment_today"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_18" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <RelativeLayout
                    android:id="@+id/layDeals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/deals"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="￥1258.00"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/deals"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_today_deals"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layOrders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/layDeals">

                    <TextView
                        android:id="@+id/orders"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="58"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/orders"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_today_orders"
                        android:textColor="@color/gray" />
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/gray_light"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/shop_fragment_order"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_18" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <RelativeLayout
                    android:id="@+id/layAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="5"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/all"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_all"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/laySelling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/layAll">

                    <TextView
                        android:id="@+id/selling"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="15"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/selling"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_selling"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/laySoldout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/laySelling">

                    <TextView
                        android:id="@+id/soldout"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="10"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/soldout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_soldout"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layTostayon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/laySoldout">

                    <TextView
                        android:id="@+id/tostayon"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="12"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/tostayon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_tostayon"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/ibArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_setting_arrow" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/gray_light"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/shop_fragment_products"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_18" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <RelativeLayout
                    android:id="@+id/layUnpaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/unpaid"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="20"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/unpaid"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_unpaid"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layOverhang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/layUnpaid">

                    <TextView
                        android:id="@+id/overhang"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="18"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/overhang"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_overhang"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layShipped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/layOverhang">

                    <TextView
                        android:id="@+id/shipped"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="2"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/shipped"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_shipped"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layRefund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/layShipped">

                    <TextView
                        android:id="@+id/refund"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="0"
                        android:textColor="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/refund"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/shop_order_refund"
                        android:textColor="@color/gray" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/ibAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_setting_arrow" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>